<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Item_Inicio"
        android:title="@string/Item_inicio"
        android:icon="@drawable/ic_inicio"
        />

    <item
        android:id="@+id/Item_Chat"
        android:title="@string/Item_Chat"
        android:icon="@drawable/ic_chat"
        />

    <item
        android:id="@+id/Item_Vender"
        android:title="@string/Item_Vender"
        android:enabled="false"
        />

    <item
        android:id="@+id/Item_Mis_Anuncios"
        android:title="@string/Item_Mis_Anuncios"
        android:icon="@drawable/ic_mis_anuncios"
        />

    <item
        android:id="@+id/Item_Cuenta"
        android:title="@string/Item_Cuenta"
        android:icon="@drawable/ic_cuenta"
        />

</menu>